# abstract-algebra-3rd-sem

./: .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt  ModArithmetic.cpp  ModArithmetic.h  README.md  main.cpp
BigInt/: BigInt.cpp  BigInt.h
BigInt/testsBigInt/: big_int_test_gen.py  test.txt  test_res.txt
Carmichael function/: Carmichael function.cpp
ElipticCurves/: Eliptic.cpp  Eliptic.h  PT.h
Generator_of_G/: Gen_of_G.cpp  Gen_of_G.h
GroupElementOrder/: GroupElementOrder.cpp
ModArithmetic/: ModArithmetic.h
MontgomeryReduction/: MontgomeryReducer.cpp  MontgomeryReducer.h
Schedule the number by multipliers/: Pollard’s Algorithm
euler function/: Algebra Shkarupa Mykyta.cpp
tests/: test.txt  test_res.txt
testsBigInt/: big_int_test_gen.py  test.txt  test_res.txt
